--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-version: "2"
+version: "3.8"
+
 services:
   app:
     build: .
-    environment:
-      - NODE_ENV=development
-    volumes:
-      - ".:/app"
     ports:
-      - "3000:3000"
+      - 3000:3000
+    volumes:
+      - .:/app
